base/infrastructures/jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paybridge-jaeger
  namespace: paybridge
  labels:
    app: paybridge-jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paybridge-jaeger
  template:
    metadata:
      labels:
        app: paybridge-jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.55
          imagePullPolicy: IfNotPresent

          ports:
            - name: ui
              containerPort: 16686

            - name: otlp-grpc
              containerPort: 4317

            - name: otlp-http
              containerPort: 4318

            - name: collector
              containerPort: 14250

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
