base/infrastructures/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paybridge-jaeger
  namespace: paybridge
spec:
  selector:
    app: paybridge-jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686

    - name: otlp-grpc
      port: 4317
      targetPort: 4317

    - name: otlp-http
      port: 4318
      targetPort: 4318

    - name: collector
      port: 14250
      targetPort: 14250
