base/infrastructures/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybridge-jaeger
  namespace: paybridge
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.paybridge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paybridge-jaeger
                port:
                  number: 16686
